--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Firebase test</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <script defer src="js/app.js"></script>
+    <script defer src="/functions/index.js"></script>
      <body>
 
       <!--new request modal-->
